--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,25 @@
       <version>4.10</version>
     </dependency>
     <dependency>
-      <groupId>org.trello4j</groupId>
-      <artifactId>trello4j</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.10</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>1.23.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.oauth-client</groupId>
+      <artifactId>google-oauth-client-jetty</artifactId>
+      <version>1.23.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-calendar</artifactId>
+      <version>v3-rev276-1.23.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>thedirectorapi</finalName>
