--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,6 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>jersey-servlet</servlet-name>
-    <url-pattern>/api/*</url-pattern>
+    <url-pattern>/director/*</url-pattern>
   </servlet-mapping>
 </web-app>
